Don't fail if a single image fail